FreedomSanboxAntDeploy/src/objects/Conveyance_Expense__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Notes__c</fullName>
        <label>Additional Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_received__c</fullName>
        <label>Amount received</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Entity_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entity Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Conveyance Expenses</relationshipLabel>
        <relationshipName>Conveyance_Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expense_Category__c</fullName>
        <label>Expense Category</label>
        <picklist>
            <picklistValues>
                <fullName>Conveyance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gifts</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expense_Date__c</fullName>
        <label>Expense Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expense_Details__c</fullName>
        <label>Expense Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expense_Sub_Category__c</fullName>
        <label>Expense Sub-Category</label>
        <picklist>
            <controllingField>Expense_Category__c</controllingField>
            <picklistValues>
                <fullName>Bus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Petrol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rickshaw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taxi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Train</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Name</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Conveyance Expenses</relationshipLabel>
        <relationshipName>Conveyance_Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marketing_Owner__c</fullName>
        <label>Marketing Owner</label>
        <picklist>
            <picklistValues>
                <fullName>Ashwin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hemal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suphia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Platform_User_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Platform User Lead</label>
        <referenceTo>Lead_Platform_User__c</referenceTo>
        <relationshipLabel>Conveyance Expenses</relationshipLabel>
        <relationshipName>Conveyance_Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Conveyance Expense</label>
    <nameField>
        <label>Expense Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conveyance Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>